<resources>
    <string name="app_name">微信</string>
    <string name="Group_name">今晚打阿威(6)</string>
    <string name="choice">•••</string>
    <string name="chat">在此输入消息</string>
    <string name="yuying" />
    <string name="biaoqing" />
    <string name="send_bg">在此输入消息</string>
    <string name="Chat_bar" />
    <string name="wechat_return" />
    <string name="we" />
    <string name="you" />
    <string name="fruitimage" />
    <string name="fruitTime">TextView</string>
    <string name="fruitChat">TextView</string>
    <string name="weChat">微信</string>
    <string name="we_chat">微信</string>
    <string name="we_mail">通讯录</string>
    <string name="we_find">发现</string>
    <string name="we_me">我</string>
    <string name="tongxunlu">通讯录</string>
    <string name="SOUSUO">搜索</string>
</resources>